[gd_scene load_steps=2 format=3 uid="uid://y0ns3lfk6nqn"]

[ext_resource type="Script" uid="uid://c3xickcr1w7vy" path="res://game_objects/height_body_2d/height_body_2d.gd" id="1_otrgm"]

[node name="HeightBody2D" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_otrgm")

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
